--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,23 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#484b4e",
-    "activityBar.background": "#484b4e",
+    "activityBar.activeBackground": "#38037f",
+    "activityBar.background": "#38037f",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#c7588f",
+    "activityBarBadge.background": "#8a049c",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#484b4e",
-    "statusBar.background": "#303234",
+    "sash.hoverBorder": "#38037f",
+    "statusBar.background": "#22024d",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#484b4e",
-    "statusBarItem.remoteBackground": "#303234",
+    "statusBarItem.hoverBackground": "#38037f",
+    "statusBarItem.remoteBackground": "#22024d",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#303234",
+    "titleBar.activeBackground": "#22024d",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#30323499",
+    "titleBar.inactiveBackground": "#22024d99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#303234"
+  "peacock.color": "#22024d"
 }
