--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^10.9.0",
     "next": "13.1.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
