--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node generate-sitemap.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +28,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
+    "globby": "^14.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
